--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 h1 { 
-    color:##a80014;
+    color:#a80014;
+}
+main{
+    background-color: #ffd1f4;
 }
 nav ul {
     padding:0;
@@ -12,8 +15,11 @@ nav ul li{
 
 nav ul li a{
     display: block;
-    padding:.5rem 1 rem;
+    padding:.5rem 1rem;
+    color:white;
+    font-size: 1.2em;
     background-color:#a8007e;
+    text-decoration:none;
 }
 
 main h1{
