--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,93 @@
-h1 { 
-    color:#a80014;
-}
-body{
-    background-color: #ffd1f4;
-}
-nav ul {
-    padding:0;
-}
-
-nav ul li{
-    float:left;
-    list-style-type: none;
-}
-
-nav ul li a{
-    display: block;
-    padding:.5rem 1rem;
-    color:white;
-    font-size: 1.2em;
-    background-color:#a8007e;
-    text-decoration:none;
-}
-
-main h1{
-    clear:both;
-}
-
-main img{
-    float:right;
-}
-
-footer{
+@import url('https://fonts.googleapis.com/css?family=Berkshire+Swash&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Leckerli+One&display=swap');
+  h1{
+    font-size:2.5em;
+    font-family: 'Berkshire Swash', cursive;
+    color:#EDE5A6;
     text-align:center;
-    clear:both;
+    letter-spacing:2px;
+  }
+  
+  header{
+    background-color:#592941;
+    border-radius: 10px;
+    line-height:5em;
+  }
+  
+  h3, li{
+    color:#592941;
+  }
+  
+  body{   
+  font-family: 'Helvetica neue', Arial, 'sans serif';
+  font-size:1em;     
+  }
+  
+  .idcard{
+    background-color: #EDE5A6;
+    width:35em;
+    border-radius: 10px;
+    margin: 0 auto;
+  }
+  
+  footer{
+    background-color:#592941;
+    color:#EDE5A6;
+    text-align:center;
+    font-size:.75em;
+    border-radius: 10px;
+    height:4em;
+    padding: 1% 0;
+  }
+  
+  .idcard img{
+    float:right;
+    padding:1em;
+    border-radius: 20px;   
+  }
+
+  
+  .middle a:link {
+  color: #498467;
+    }
+  
+  .middle a:visited {
+  color: #498467;
+  }
+
+ .middle a:hover {
+  color: #592941;
+  }
+
+ .middle a:active {
+  color: #592941;
+  }
+  
+  .middle h3{
+    padding-left:20px;
+  }
+  
+  
+  footer a:link{
+   color: #B2D3A8;
+  }
+  
+  footer a:visited {
+  color: #498467;
+  }
+
+  footer a:hover {
+  color: #EDE5A6;
+  }
+
+  footer a:active {
+  color: #592941;
+  }
+  
+  hr {
+display: block;
+margin-before: .5em;
+margin-after: .5em;
+margin-start: auto;
+margin-end: auto;
 }
