--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,9 @@
   }
   
   hr {
-display: block;
-margin-before: .5em;
-margin-after: .5em;
-margin-start: auto;
-margin-end: auto;
+    display: block;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    margin-right: auto;
+    margin-left: auto;
 }
