--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,11 @@
   
   .idcard img{
     float:right;
-    padding:1em;
-    border-radius: 20px;   
+    right:20px;
+    top:20px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px 0px #750a23e0;
+    position:relative;  
   }
 
   
