--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
   
   header{
     background-color:#592941;
-    border-radius: 10px;
+    border-radius: 5px 80px;
     line-height:5em;
   }
   
@@ -26,7 +26,7 @@
   .idcard{
     background-color: #EDE5A6;
     width:35em;
-    border-radius: 10px;
+    border-radius:5px 80px; 
     margin: 0 auto;
   }
   
@@ -35,7 +35,7 @@
     color:#EDE5A6;
     text-align:center;
     font-size:.75em;
-    border-radius: 10px;
+    border-radius:  5px 80px;
     height:4em;
     padding: 1% 0;
     line-height: 1.2em;
@@ -45,7 +45,7 @@
     float:right;
     right:20px;
     top:20px;
-    border-radius: 20px;
+    border-radius: 5px 60px;
     box-shadow: 0px 0px 20px 0px #750a23e0;
     position:relative;  
   }
