--- a/css/small.css
+++ b/css/small.css
@@ -1,7 +1,7 @@
 
 
   h1{
-    font-size:2.5em;
+    font-size:2rem;
     font-family: 'Berkshire Swash', cursive;
     color:#EDE5A6;
     text-align:center;
@@ -9,13 +9,20 @@
   }
   
   header{
-    background-color:#592941;
-    border-radius: 5px 80px;
-    line-height:5em;
+    background-color:#592941; 
+    margin-top: 10px;
+    display:block;
+  }
+
+  header, nav, main, footer{
+    margin: 0 auto;
+    padding:0.75rem;
+    max-width: 45rem;
   }
   
   h3, li{
     color:#592941;
+    font-size: 1rem;
   }
   
   body{   
@@ -25,8 +32,7 @@
   
   .idcard{
     background-color: #EDE5A6;
-    width:35em;
-    border-radius:5px 80px; 
+    width:32.5em;
     margin: 0 auto;
   }
   
@@ -35,19 +41,16 @@
     color:#EDE5A6;
     text-align:center;
     font-size:.75em;
-    border-radius:  5px 80px;
     height:4em;
     padding: 1% 0;
     line-height: 1.2em;
   }
   
   .idcard img{
-    float:right;
-    right:20px;
-    top:20px;
-    border-radius: 5px 60px;
-    box-shadow: 0px 0px 20px 0px #750a23e0;
-    position:relative;  
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   
   }
 
   
