--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -12,12 +12,12 @@ header, footer, h2 {
 }      
 
 h1 {
-    font-family: font-family: 'Anton', sans-serif;
+    font-family: 'Anton', sans-serif;
     font-size: 3em;
 }
 
 h2 {
-    font-family: font-family: 'Sail', cursive;
+    font-family: 'Sail', cursive;
     font-size: 2em;
 }
 
