--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -4,28 +4,97 @@
 
 main {display: grid;
       grid-template-columns: 1fr;
-      grid-column-gap: 2rem;
-    margin:25px;}
+      grid-column-gap: 0.5em;
+     }
 
 header, footer, h2 {
     text-align: center;
-}      
+    background-color:#1C77C3;
+    color:#89E9FF;
+} 
 
-h1 {
-    font-family: 'Anton', sans-serif;
-    font-size: 3em;
+
+header h1 {
+    font-family: 'Playfair Display SC', serif;
+    font-size: 4.5em;
+    line-height: 120%;
 }
 
-h2 {
+header h2{
+    display:inline;
+    font-size:3em;
+    color:rgb(230, 230, 230); 
+    border-bottom: 2px solid #89E9FF; 
     font-family: 'Unica One', cursive;
-    font-size: 2em;
+    line-height: 10%;
+    padding: 0 20px;
 }
+
+main {margin-top: 1em;}
+
+main img{
+    border:4px double white;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+main h2 {
+    font-family: 'Unica One', cursive;
+    font-size: 1.5em;
+    padding:10px;
+    border-radius: 15px/45px;  
+}
+
+
 
 body {
     font-family:"Trebuchet MS", Helvetica, sans-serif;
+    background-image: url("/lesson2/images/email-pattern.png"); 
+    background-repeat: repeat;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
-/*body {
-    width:1300px;
-    margin: 0 auto;
-}*/
+.column{
+    margin:10px;
+    background-color: #2B2D42;
+    color:#89E9FF;
+    padding:25px;
+}
+
+.column figcaption {
+    text-align: center;
+    color: whitesmoke;
+    font-size: small;
+}
+.info {
+    padding-left:3em;
+    line-height:2em;
+    font-weight: bold;
+}
+
+a:link {
+    text-decoration: none;
+  }
+
+
+.column a:link {
+    color: whitesmoke;
+      }
+    
+ .column a:visited {
+    color: whitesmoke;
+    }
+  
+.column a:hover {
+    color:#1C77C3;
+    }
+  
+.column a:active {
+    color: #592941;
+    }
+
+footer {
+    padding:20px;
+}
