--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -4,5 +4,23 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
 
+    header h1 {
+
+        font-size: 4.5em;
+
+    }
+    
+    header h2{
+
+        font-size:3em;
+    }
+
+    
+    main h2 {
+
+        font-size: 1.5em;
+
+    }
+
 
 }
