--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -17,17 +17,17 @@ header, footer, h2 {
 header h1 {
     font-family: 'Playfair Display SC', serif;
     font-size: 2.5em;
-    line-height: 120%;
+    
 }
 
 header h2{
     display:inline;
     font-size:2em;
     color:rgb(230, 230, 230); 
-    border-bottom: 2px solid #89E9FF; 
+    text-align:center;
     font-family: 'Unica One', cursive;
-    line-height: 10%;
-    padding: 0 20px;
+    padding: 20px; 
+    border-bottom: 5px solid #89E9FF; 
 }
 
 main {margin-top: 1em;}
