--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -11,7 +11,9 @@
 
 
 /*----------- HEADER --------------*/
-
+header img{width:80px;}
+header h1{font-size:3.5rem;}
+header h2{font-size:1.3rem;}
 
 
 /*----------- NAVIGATION --------------*/
