--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -7,9 +7,9 @@
 
 
 /*----------- HEADER --------------*/
-    header img{width:auto;}
+    header img{width:60px;}
     header h1{font-size:2rem;}
-    header h2{font-size:1.5rem;}
+    header h2{font-size:1rem;}
 
 
 /*----------- NAVIGATION --------------*/
