--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -9,7 +9,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 body {
     font-size: 16px;
     Font-Family: 'Lato', Sans-Serif;
-    color:#42253b;}
+    color:#42253b;
 }
 
 
