--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -18,11 +18,11 @@ header {
     padding: .5rem 2%;
     background-color: #42253b;
     color:#abfaa9;
-    Font-Family: 'Prata', Serif;
 }
 
 header img{float:left; margin-right:10px; width:50px;}
-header h1 {margin: 0; font-size:1.3rem;}
+header h1 {margin: 0; font-size:1.3rem;
+           Font-Family: 'Prata', Serif;}
 header h2 {margin: 0; font-size:1rem;
             Font-Family: 'Lato', Sans-Serif;
 }
@@ -42,7 +42,7 @@ nav ul li a {
     color: #4c2c69;
     padding: .5rem 0;
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 16px;
     text-align: center;
     font-weight: bold;
 }
@@ -61,7 +61,8 @@ main {
     min-height: 10rem;
 }
 main h1{color:#42253b;}
-main h2{color:#4c2c69;}
+main h2{color:#4c2c69;
+        Font-Family: 'Prata', Serif;}
 
 /*----------- FOOTER --------------*/
 footer {
@@ -69,7 +70,7 @@ footer {
     padding: .5rem 2%;
     text-align: center;
     color: #4c2c69;
-    font-size: .9rem;
+    font-size: 12px;
 }
 
 footer a {
@@ -94,4 +95,9 @@ footer a:hover {
 .sitename {
 background-color:  #abfaa9;
 Font-Family: 'Prata', Serif;
+}
+
+main #typography img{
+    width:800px;
+
 }
