--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -21,7 +21,9 @@ header h2{font-size:1.3rem;}
 
 
 /*----------- MAIN --------------*/
-
+main img {
+    width: 75%;  
+}
 
 
 /*----------- FOOTER --------------*/
