--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -13,11 +13,32 @@
 
 
 /*----------- NAVIGATION --------------*/
-    nav ul {margin-left: 2%;}
-    nav ul li {float: left;}
+/*nav ul { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    nav ul li a{padding: .5rem 1rem;}
 
+  nav li a { 
+    display: inline-block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: white;
+  }
+*/
+
+nav ul { 
+    display: flex; 
+}
+nav ul li { 
+    flex: 1 1 100%;
+}
+
+nav ul li a {
+	padding: .5rem 1rem;
+}
 
 /*----------- MAIN --------------*/
 main img {
