--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -10,7 +10,7 @@ body {
     font-size: 16px;
     Font-Family: 'Lato', Sans-Serif;
     color:#42253b;
-    background-image: url("/images/weathergrey.png");
+    background-image: url("/lesson4/images/weathergrey.png");
     background-repeat: repeat;
 }
 
