correction on date js

--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -135,9 +135,8 @@ footer {
     color: #4c2c69;
     font-size: 12px;
     line-height: 1.5rem;
-    
     bottom: 0;
-    
+    font-weight: bold;
 }
 
 footer a {
