--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -104,7 +104,8 @@ main {
 }
 main h1{color:#42253b;}
 main h2{color:#4c2c69;
-        Font-Family: 'Prata', Serif;}
+        Font-Family: 'Prata', Serif;
+       }
 
 main img {
     display: block;
@@ -126,6 +127,7 @@ main img {
 main div {
     background-color: #95a3b3;
     height:150px;
+ 
 }
 /*----------- FOOTER --------------*/
 footer {
