--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -1,8 +1,8 @@
 /* 64em is also 1028px (if basefont is 16px) */
-@media only screen and (min-width: 1141px) {
+@media only screen and (min-width: 64rem) {
 
     header, nav, main, footer {
-        max-width: 1024px;
+        max-width: 64rem;
         margin: 0 auto;
     }
 
