contact us grid

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -75,6 +75,10 @@ td {
 	text-align: center;
 }
 
+.hidden {display:block;}
+
+
+
 /*----------- FOOTER --------------*/
     
 } /* end of media query */
