--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -122,11 +122,13 @@ main h2{color:#4c2c69;
 .weathersummary {
     position:absolute;
     top:1rem;
-    left:2rem;
-    background: radial-gradient(circle, rgba(171,250,169,1) 0%, rgba(130,209,115,1) 66%);
+    left:2rem;   
     border: 1px solid #abfaa9;
     padding: 1rem;
     box-shadow: 0 8px 6px -6px black; 
+    background: linear-gradient(to top, rgba(226,226,226,0.6699054621848739) 0%, rgba(130,209,115,0.6895133053221288) 100%);
+    font-weight: bold;
+    text-shadow: 0.075em 0.08em 0.1em rgb(226, 225, 225);
 }
 
 .bottom{
@@ -166,11 +168,11 @@ div.hideme{display:none;}
     display: none;
     }
  
-.contactusbox{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-}    
+    .contactusbox{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+    }     
 
 /*----------- FOOTER --------------*/
 footer {
