map display none

--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -154,9 +154,6 @@ main div {
  box-shadow: 0 0 30px #777;
 }
 
-.smallImgTxt2 {
-    display:none;
-}
 
 div#message {background-color:#abfaa9;
             padding:5px;}
@@ -164,14 +161,13 @@ div.showme{display:block;}
 div.hideme{display:none;}
 
 
-    .hidden {
+.hidden, .map {
     display: none;
     }
  
-    .contactusbox{
+.contactusbox{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 20px;
     }     
 
 /*----------- FOOTER --------------*/
