--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -81,8 +81,12 @@ td {
 .contactusbox{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
 }  
+
+.map {
+    display:grid;
+
+}
 
 /*----------- FOOTER --------------*/
     
