--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -35,7 +35,7 @@ nav ul li a {
 
 /*----------- MAIN --------------*/
 
-.smallImgTxt, .smallImgTxt2 {
+.smallImgTxt, .map {
     float:right;
     margin: 0px 0px 15px 15px;
     display:block;
@@ -55,14 +55,17 @@ nav ul li a {
  }
 
  /* -------Table styling----------*/
-table, th, td {
+
+ table, th, td {
 	border:1px solid #42253b;
 	border-collapse: collapse;
     padding: 10px 25px;
     margin: 0 auto;
 }
 
-table {box-shadow: 0px 10px 13px -7px rgb(190, 189, 189), 5px 5px 5px 0px rgba(0,0,0,0.3);}
+table {
+    box-shadow: 0px 10px 13px -7px rgb(190, 189, 189), 5px 5px 5px 0px rgba(0,0,0,0.3);
+}
 
 th {
 	font-weight: 700;
@@ -85,8 +88,8 @@ td {
 
 .map {
     display:grid;
+ }
 
-}
 
 /*----------- FOOTER --------------*/
     
