--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -114,6 +114,9 @@ main h2{color:#4c2c69;
     position:relative;
 }
 
+.herodiv img{
+    width: 100%;
+}
 .hero-ph { 
    margin: 0;
    width:500px ;
@@ -124,7 +127,7 @@ main h2{color:#4c2c69;
     top:1rem;
     left:2rem;   
     border: 1px solid #abfaa9;
-    padding: 1rem;
+    padding: .8rem;
     box-shadow: 0 8px 6px -6px black; 
     background: linear-gradient(to top, rgba(226,226,226,0.6699054621848739) 0%, rgba(130,209,115,0.6895133053221288) 100%);
     font-weight: bold;
