--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -56,7 +56,7 @@ nav ul li a {
 
  /* -------Table styling----------*/
 
- table, th, td {
+ /*table, th, td {
 	border:1px solid #42253b;
 	border-collapse: collapse;
     padding: 10px 25px;
@@ -78,7 +78,7 @@ td {
 	font-size: 13px;
 	text-align: center;
 }
-
+*/
 .hidden {display:block;}
 
 .contactusbox{
@@ -90,6 +90,21 @@ td {
     display:grid;
  }
 
+section.forecast{
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+    box-shadow: 0px 10px 13px -7px rgb(190, 189, 189), 5px 5px 5px 0px rgba(0,0,0,0.3);
+}
+
+section.forecast div{
+    text-align:center;
+    border: 1px solid grey;
+}
+section.forecast div h3{
+    background-color: #abfaa9;
+    margin: 0;
+    padding: 1rem 0;
+}
 
 /*----------- FOOTER --------------*/
     
