--- a/lesson7/css/medium.css
+++ b/lesson7/css/medium.css
@@ -108,8 +108,7 @@ section.forecast div h3{
 
 .gallery-gridcontainer{
     display:grid;
-    grid-template-columns:1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr;
+    grid-template-columns:1fr 1fr;
     row-gap: 15px;
     column-gap: 5px;
     justify-content: center;
