--- a/lesson7/css/lazyload-small.css
+++ b/lesson7/css/lazyload-small.css
@@ -11,7 +11,7 @@ picture img[data-src] {
 picture img {
 	filter: blur(0em);
 	transition: filter 0.5s;
-    border: 3px dotted purple;
+    border: 15px groove purple;
     padding:3px;
 	margin: 5px;
 	min-width: 300px;
