--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -209,6 +209,96 @@ section.forecast {
 	min-width: 300px;
 }
 
+.thanks img{
+    border:8px solid #FFFAFA;
+    transition: 0.4s ease-in-out;
+}
+
+.thanks img:hover{
+    transform: rotate(3deg);
+    width: 580px;
+}
+
+.thanks figcaption{
+    font-size: small;
+}
+
+form fieldset {
+    margin: 2rem 0;
+    border: 1px solid #82d173;
+    border-radius:10px;
+    padding: .5rem 2%;
+}
+
+form legend{
+    color:#4c2c69;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+
+form label.top, form div{
+    display:block;
+    padding-top: 1rem;
+    color: #42253b;
+    font-size: .8rem;
+}
+
+form label.top input, form label.top select{
+    -webkit-appearance: none;
+    display:block;
+    font-size:1rem;
+    border: solid 1px #4c2c69;
+    border-radius: 4px;
+    padding:.75rem;
+    color: #555;
+    width:100%;
+    max-width:20rem;
+    background-color: rgba(0,0,0,0.1);
+}
+
+form label.sbs {
+    display:block;
+    padding:.75rem 0;
+    color: #42253b;
+}
+
+form input.submitBtn{
+    border:none;
+    background-color:#42253b;
+    border-radius: 1rem;
+    padding:.75rem 1.5rem;
+    margin:0 0 2rem 2%;
+    width:95%;
+    max-width: 20rem;
+    color:white;
+}
+
+form label.top input:required {
+    border-left: #4c2c69 solid 6px;
+}
+
+form label.top input:required:valid{
+    border-left:#82d173 solid 6px;
+}
+.flexly {
+	display: flex;
+    align-items: center;
+    padding-top: 1.5rem;
+    color: #42253b;
+    font-size: 1rem;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width:20%;
+    height:5px;
+    background: #4c2c69;
+}
+
+#ratingvalue{
+    padding-left: 5px;
+}
+
 /*----------- FOOTER --------------*/
 footer {
     /*background-color:  #82d173;*/
