--- a/lesson8/css/medium.css
+++ b/lesson8/css/medium.css
@@ -4,7 +4,9 @@
 
 /*----------- BODY --------------*/
 
-
+.slider {
+    width:30%;
+}
 
 /*----------- HEADER --------------*/
     /*header img{width:60px;}
