--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -271,8 +271,13 @@ form input.submitBtn{
     width:95%;
     max-width: 20rem;
     color:white;
+    cursor: pointer;
 }
 
+form input.submitBtn:hover{
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: #4c2c69;
+}
 form label.top input:required {
     border-left: #4c2c69 solid 6px;
 }
