--- a/lesson8/css/large.css
+++ b/lesson8/css/large.css
@@ -57,7 +57,7 @@ div.gallery-gridcontainer>div>div.photocap:hover{
 .photocap {
     display:block;}
 
-.slider {
+#rating.slider {
         width:20%;
       
     }    
