--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -285,6 +285,7 @@ form label.top input:required {
 form label.top input:required:valid{
     border-left:#82d173 solid 6px;
 }
+
 .flexly {
 	display: flex;
     align-items: center;
@@ -314,8 +315,11 @@ form label.top input:required:valid{
 label.comments>textarea{
     display:block;
     margin-top:10px;
+    border-radius: 4px;
+    border-color: #42253b;
+    background: rgb(130,209,115);
+    background: linear-gradient(0deg, rgba(130,209,115,0.7042593795262027) 0%, rgba(226,226,226,0.687405446941933) 43%);
 }
-
 /*----------- FOOTER --------------*/
 footer {
     /*background-color:  #82d173;*/
