--- a/lesson9/css/small.css
+++ b/lesson9/css/small.css
@@ -331,13 +331,20 @@ div.homecards>section{
     border: double 4px #4c2c69;
     width: 80%;
     margin-top:20px;
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+    /*box-shadow:-5px -5px 10px;*/
 }
+
+div.homecards>section:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
 
 div.homecards>section>img{
     display: block;
 	border: 0;
 	width: 100%;
     height: 100.1%;
+    text-align: center;
 
    /*width: auto; /* to keep proportions */
     /*height: auto; /* to keep proportions */
