--- a/lesson10/css/medium.css
+++ b/lesson10/css/medium.css
@@ -41,6 +41,13 @@
             box-shadow: 0 0 30px #777;
         }
 
+        .smallImgTxt2{
+            float:left;
+            margin: 0px 15px 15px 0px;
+            display:block;
+            box-shadow: 0 0 30px #777;
+        }
+
         .herodiv{
             position:relative;
             margin-bottom: .5em;
