--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -408,8 +408,9 @@ input#hide:checked ~ section#content {
 
 .readMore{
     color:#4c2c69;
-    background: linear-gradient(90deg, rgba(171,250,169,1) 0%, rgba(226,226,226,0) 18%);
+    background: linear-gradient(90deg, rgba(171,250,169,1) 0%, rgba(226,226,226,0) 15%);
     padding-left:8px;
+    display:block;
 }
 /*----------- FOOTER --------------*/
 footer {
