--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -412,6 +412,10 @@ input#hide:checked ~ section#content {
     padding-left:8px;
     display:block;
 }
+
+p.small{
+    font-size: small;
+}
 /*----------- FOOTER --------------*/
 footer {
     /*background-color:  #82d173;*/
