--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -10,7 +10,7 @@ body {
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
     color:#4A789C;
-    background-image: url("/images/wavy.jpg");
+    background-image: url("/canyonfishadventures/images/wavy.jpg");
     background-repeat: repeat;
 }
 
