--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -155,6 +155,7 @@ section.weathersummary{
     text-align:center;
     padding:.5em;
     width:100%;
+    color:rgb(8, 53, 87);
 }
 
 section.weathersummary p {
