--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -70,7 +70,7 @@ nav ul li a {
     font-size: 16px;
     text-align: center;
     font-weight: bold;
-    border-top: 1px solid rgba(10, 226, 241, 0.3);
+    border-top: 1px solid #85c1f5;
 }
 
 nav ul li a:hover {
