--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -125,7 +125,9 @@ main h2{color:rgb(8, 53, 87);
     margin:10px;
     border-radius: 15px;
 }
-
+div.main:hover{
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
 .main a{
     text-decoration: none;
     color:#ffffff;
@@ -133,7 +135,7 @@ main h2{color:rgb(8, 53, 87);
 
 .main a:hover{
     text-decoration: none;
-    color:#4A789C;
+    color:rgb(8, 53, 87);
 }
 
 main.center{
