--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -189,6 +189,8 @@ section.weathersummary>p>img#icon {
     border: solid #E96D63 2px;
     margin-bottom: 1em;
     border-radius:15px;
+    position:relative;
+    box-shadow: 0 0 10px rgb(97, 97, 97);
  }
 
  .trips p{
@@ -204,9 +206,20 @@ section.weathersummary>p>img#icon {
      border-radius:13px 13px 0 0;
  }
  .trips img{
+    position:sticky;
     vertical-align: bottom;
     width:100%;
     border-radius:0 0 13px 13px;
+    bottom: 0;
+    top:500px;
+   
+ }
+
+ div.trips>div>p.strong{
+    background-color: #85c1f5;
+    padding:5px 25px;
+    color:rgb(8, 53, 87);
+    margin:0;
  }
 /*-------------homepage slideshow--------*/
 .slider {
