--- a/canyonfishadventures/css/medium.css
+++ b/canyonfishadventures/css/medium.css
@@ -16,6 +16,9 @@ header h1 {margin: 0; font-size:3.5rem;
     -webkit-text-fill-color: transparent;
 }
 
+header h2{
+    margin: 0 3em;
+}
 /*----------- NAVIGATION --------------*/
 
 
