--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -34,8 +34,10 @@ header h1 {font-size:3rem;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         }
-header h2 {margin:0; font-size:1.5rem;
+header h2 { 
+        font-size:1.5rem;
         font-family: 'Open Sans', sans-serif;
+        margin: 0 2em;
 }
 
 /*----------- NAVIGATION --------------*/
