--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -273,11 +273,11 @@ form input.submitBtn{
     background-color:#7FCA9F;
     border-radius: 1rem;
     padding:.75rem 1.5rem;
-    margin:0 0 2rem 2%;
     width:95%;
     max-width: 20rem;
     color:rgb(8, 53, 87);
     cursor: pointer;
+    margin: 0 0 2rem 2%;
 }
 
 form input.submitBtn:hover{
@@ -357,9 +357,9 @@ div.cards>div img {
   .container input[type=submit] {
     background-color: #E96D63;
     color: white;
-    padding: 12px 20px;
+    padding:.75rem 3.5rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 1rem;
     cursor: pointer;
   }
   
