--- a/canyonfishadventures/css/small.css
+++ b/canyonfishadventures/css/small.css
@@ -105,6 +105,7 @@ main h1{color:#E96D63;
     text-align: center;
     font-weight: bolder;
     font-family: 'Open Sans', sans-serif;
+    text-shadow: 0px 1.5px 1.5px rgba(0,0,0,0.4);
 }
 main h2{color:rgb(8, 53, 87);
          font-family: 'Leckerli One', cursive;
@@ -175,6 +176,7 @@ section.weathersummary p {
     color:rgb(8, 53, 87);
     border-radius: 10px;
     padding:1%;
+    box-shadow:  1px 8px 5px -5px rgba(102, 102, 102, 0.75);
 }
 
 section.weathersummary>p>img#icon {
